# voris_description

./: CMakeLists.txt  package.xml
cfg/:  bluerov_config.rviz  lab_config.rviz  orca_config.rviz  sim_config.rviz  sm3_config.rviz
include/: vision_odom.hpp
launch/: lab_visualize.launch.py  mobile_bench.launch.py  sim_visualize.launch.py  sm2_visualize.launch.py  sm3_visualize.launch.py  visualize.launch.py  voris_visualize.launch.py
scripts/: joint_state_publisher.py  odom2tf.py
src/: vision_odom.cpp
urdf/bluerov2/: bluerov2_heavy.urdf  r2d2.urdf  simple_bluerov2_heavy.urdf
urdf/laboratory/: mobile_bench.urdf  optical_test_bench.urdf  optical_test_bench.xacro  sm2.urdf  sm3_laser.urdf
